crates/analyzer/tests/snapshots/errors__mislabeled_call_args_external_contract_call.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `Foo` expects 1 argument, but 2 were provided
   ┌─ compile_errors/mislabeled_call_args_external_contract_call.fe:11:9
   │
11 │         Foo(ctx, address(0)).baz(doesnt_exist: 1, me_neither: 4)
   │         ^^^ ---  ---------- supplied 2 arguments
   │         │         
   │         expects 1 argument

error: type mismatch
   ┌─ compile_errors/mislabeled_call_args_external_contract_call.fe:11:13
   │
11 │         Foo(ctx, address(0)).baz(doesnt_exist: 1, me_neither: 4)
   │             ^^^ this has type `Context`; expected type `address`

error: argument label mismatch
   ┌─ compile_errors/mislabeled_call_args_external_contract_call.fe:11:34
   │
11 │         Foo(ctx, address(0)).baz(doesnt_exist: 1, me_neither: 4)
   │                                  ^^^^^^^^^^^^ expected `val1`

error: argument label mismatch
   ┌─ compile_errors/mislabeled_call_args_external_contract_call.fe:11:51
   │
11 │         Foo(ctx, address(0)).baz(doesnt_exist: 1, me_neither: 4)
   │                                                   ^^^^^^^^^^ expected `val2`


